[gd_scene format=3 uid="uid://04i15e30pltm"]

[ext_resource type="Script" uid="uid://d0106ru16swsb" path="res://Scripts/gui/game_choose_menu.gd" id="1_nlxf7"]
[ext_resource type="PackedScene" uid="uid://bnqohi6mq2o14" path="res://Scenes/gui/Template/SaveTemplate.tscn" id="2_awayp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlxf7"]
bg_color = Color(0.133196, 0.133196, 0.133196, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.118581, 0.118581, 0.118581, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="GameChooseMenu" type="Control" unique_id=116153237]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlxf7")
save_scene = ExtResource("2_awayp")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1429496419]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer" unique_id=39913979]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nlxf7")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer" unique_id=1825945237]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/VBoxContainer" unique_id=1052661172]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/ScrollContainer" unique_id=1217167292]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SaveParent" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/ScrollContainer/MarginContainer" unique_id=64702842]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" parent="MarginContainer/PanelContainer/VBoxContainer/ScrollContainer/MarginContainer/SaveParent" unique_id=1468392253 instance=ExtResource("2_awayp")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer" unique_id=65212724]
custom_minimum_size = Vector2(0, 36.635)
layout_mode = 2

[node name="Save" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer" unique_id=1634344607]
layout_mode = 2
text = "SAVE GAME"

[node name="Load" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer" unique_id=1685023415]
layout_mode = 2
text = "Load"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
